# genie-config-optimizer

./: .config.example  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
example_csv/: bakehouse_genie_test_scenarios.csv
optimizer_runs/: notes.md
src/genie_config_optimizer/: anthropic_client.py  archiver.py  cli.py  config.py  csv_loader.py  databricks_client.py  orchestrator.py  patcher.py  prompts.py
tests/: conftest.py
tests/integration/: test_live_run.py
tests/unit/: test_archiver.py  test_csv_loader.py  test_orchestrator_helpers.py  test_patcher.py
