[project]
name = "genie-config-optimizer"
version = "0.1.0"
description = "CLI tool that programmatically optimizes a Databricks Genie space using an evaluation CSV and Claude as the judge."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "tqdm>=4.66",
]

[project.scripts]
genie-config-optimizer = "genie_config_optimizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genie_config_optimizer"]
