[project]
name = "genie-config-optimizer"
version = "0.1.0"
description = "CLI tool that programmatically optimizes a Databricks Genie space using an evaluation CSV and Claude as the judge."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "tqdm>=4.66",
]

[project.scripts]
genie-config-optimizer = "genie_config_optimizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genie_config_optimizer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live API tests against Databricks + Anthropic; opt in with --runlive",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-too-long; the formatter handles wrapping where it can
    "B008",  # function-call-in-default-argument; argparse defaults are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts in tests are fine
